fixed the problem with section1 buttons not lining up when in mobile view. check the right margin there may be overflow in mobile view

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -63,6 +63,8 @@ footer button {
 #topButtons {
 
   padding-bottom: 200px;
+  padding: 25px;
+  
 
 }
 
